<?php

declare(strict_types=1);

namespace zhang;

abstract class OfflinePlatform
{
    abstract public function sendMessage();
}
